# Entrance

./: .gitignore  README.md  entrance.py  main.py  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
src/entrance/: __init__.py  _client.py
tests/: test_smoke.py
